Styles are now updated when an element is split